--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dnlsm/unper_webserver.git"
+    "url": "https://github.com/dnlsm/unper.git"
   },
   "bugs": {
     "url": "https://github.com/dnlsm/unper_webserver/issues"
@@ -20,5 +20,11 @@
   "homepage": "https://github.com/dnlsm/unper_webserver#readme",
   "dependencies": {
     "express": "^4.15.3"
-  }
+  },
+  "devDependencies": {},
+  "keywords": [
+    "unper",
+    "gpio",
+    "raspberry"
+  ]
 }
