--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
   },
   "homepage": "https://github.com/dnlsm/unper#readme",
   "dependencies": {
-    "cookie-parser": "latest",
+    "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
     "ejs": "latest",
     "express": "^4.15.3",
     "express-session": "latest",
+    "mongoose": "latest",
     "morgan": "^1.8.2",
-    "mongoose":"latest"
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {},
   "keywords": [
