--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "latest",
     "morgan": "^1.8.2",
     "passport": "^0.3.2",
+    "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {},
