--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "ejs": "latest",
     "express": "^4.15.3",
     "express-session": "latest",
+    "i2c": "^0.2.3",
+    "i2c-bus": "^1.2.2",
     "mongoose": "latest",
     "morgan": "^1.8.2",
     "passport": "^0.3.2",
     "passport-http-bearer": "^1.0.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "pcf8574": "^1.1.0"
   },
   "devDependencies": {},
   "keywords": [
